# katalon-engine

./: Cargo.toml  README.md  TODO.txt
benches/: benchmark.rs
misc/: benchmarks.txt  count.py  errors.txt  symmetries.txt  tmp.txt  variants.txt
res/benchmark/: depth05.txt  depth10.txt  depth10_high.txt  depth10_low.txt  depth15.txt  depth20.txt  depth20_high.txt  depth20_low.txt  depth25.txt  depth25_low.txt  depth30_low.txt  depth5_high.txt  depth5_low.txt
src/: board.rs  eval.rs  game.rs  human.rs  input.rs  lib.rs  main.rs  minmax.rs  player.rs  random.rs  solver.rs  table.rs
src/benches/: solver.rs
src/board/: key.rs  mod.rs
src/solver/: best.rs  bestmoves.rs  eval.rs  minmax.rs  mod.rs  negamax.rs  stats.rs  table.rs
src/solver/evaluate/: mod.rs
src/solver/search/: mod.rs
src/stats/: search.rs  table.rs
tests/: integration.rs
