# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "katalon"
version = "0.1.0"
edition = "2018"

[dependencies]
regex = "1.5"
rand = "0.8.4"
ahash = "0.7.6"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false